darkmodeicon, svg mail, kaynaklar, iletisim

--- a/content/dergi/sayi-1-dijitalleşmenin-kullanıcı-deneyimi.html
+++ b/content/dergi/sayi-1-dijitalleşmenin-kullanıcı-deneyimi.html
@@ -1,8 +1,11 @@
 +++
-title = "Dijitalleşmenin Kullanıcı Deneyimi Üzerindeki Etkisi"
-url = "sayi-1/dijitallesmenin-kullanici-deneyimi-uzerindeki-etkisi/"
+title = "Dijitalleşmede Kullanıcı Deneyimi Tasarımı"
+url = "sayi-1/dijitallesmede-kullanici-deneyimi-tasarimi/"
+aliases = [
+    "/sayi-1/dijitallesmenin-kullanici-deneyimi-uzerindeki-etkisi/"
+]
 date = "2020-09-01"
-seotitle = "Dijitalleşmenin Kullanıcı Deneyimi Üzerindeki Etkisi"
+seotitle = "Dijitalleşmede Kullanıcı Deneyimi Tasarımı"
 description="Fizikselden dijitale geçişle birlikte kullanıcı deneyiminin (ux) üzerindeki etkileri. Kullanıcı deneyimi sağlama unsurları nelerdir? Kullanıcı Deneyimi algıları neler?"
 aciklama="Dijital teknolojideki sürekli gelişimin hayatımızın her alanına nüfuz ettiğini her gün daha net görüyoruz. Gündelik yaşantımızı, kullandığımız tüm bu makineler, ürünler ve sistemler olmadan hayal edebilmek artık mümkün değil."
 thumb="/img/dijitale-yolculuk-thumbnail.jpg"
@@ -93,4 +96,22 @@ tags= [
         <div class="col-md-6"><br><br><br> <img class="img-fluid" src="/img/kullanim-deneyimi-algilari.png" alt="Kullanıcı Deneyiminde Algılar. UX (User Experince) deneyim algıları."></div>
     </div>
    
+    <button
+    class="btn markutbtn mt-4"
+    data-target="#my-collapse"
+    data-toggle="collapse"
+    aria-expanded="false"
+    aria-controls="my-collapse"
+    >
+    Kaynaklar
+    </button>
+    <div id="my-collapse" class="collapse">
+    <pre> <small><code>  
+        Kitap: Gündelik Şeylerin Tasarımı, Donald Norman
+
+        Kullanıcı Deneyiminin Dönüşümü: Fiziksel Ürünlerden Dijital Ürünlere, 2014, https://polen.itu.edu.tr/bitstream/11527/13333/1/10042049.pdf
+        
+        https://uxplanet.org/user-experience-design-in-digital-transformation-cc1923bcd2a        
+      </code></small></pre>
+    </div>
 </div>
