--- a/content/dergi/sayi-1-rayların-üzerinde-raymond-loewy.html
+++ b/content/dergi/sayi-1-rayların-üzerinde-raymond-loewy.html
@@ -12,7 +12,7 @@ tags:
 aciklama: 5 Kasım 1893’de Paris’te doğan Raymond Loewy, Amerika’da ürettiği
   eserleri sayesinde Amerikalı tasarımcı olarak tanınmıştır. Tasarım anlayışında
   fonksiyon ön plandadır, form ve biçim daha sade ve geri plandadır.
-seotitle: Raymond Loewy Lokomotif İç Tasarımı
+seotitle: Rayların Üzerinde Raymond Loewy
 description: Raymond Loewy, Amerika’da ürettiği eserleriyle Amerikalı tasarımcı
   olarak tanınmıştır. S-1 Lokomtif tasarımıyla Loewy sonsuza kadar aerodinamik
   (streamline) trenle özleşecek.
@@ -59,5 +59,29 @@ type: sayfa
            </div>
            <div class="col-md-8"><br><img class="img-fluid" src="/img/raymond-loewy-lokomotif.jpg" alt="Raymond Loewy Lokomotif Illustrasyonu"></div>
            <div class="col-md-12"><br> <img class="img-fluid" src="/img/PRR-S1-Loewy.jpg" alt="Raymond Loewy'nin PRR için yaptığı S1 Lokomotif tasarımı"></div>
+    </div>
+    <button
+    class="btn markutbtn mt-4"
+    data-target="#my-collapse"
+    data-toggle="collapse"
+    aria-expanded="false"
+    aria-controls="my-collapse"
+    >
+    Kaynaklar
+    </button>
+    <div id="my-collapse" class="collapse">
+    <pre> <small><code>  
+      Koltuk çizimlerine kaynak
+      Collection ‘’Cooper Hewitt’’
+      HIGH FASHION TRAIN INTERIOR
+     
+      DRAWING, DESIGN FOR STREAMLINE SLEEPER CAR WITH TWO SEAT COMPARTMENT, JANUARY 16, 1935
+
+      DRAWING, INTERIOR COLOR TREATMENT FOR MP-54 COACH PASSENGER CAR, MAY 26, 1936
+
+      https://www.theavanti.com/lithograph/s1.html  (Lokomotoif s-1 çizim)
+
+      https://en.wikipedia.org/wiki/Raymond_Loewy (raymond ve lokomotifli görsel)      
+      </code></small></pre>
     </div>
 </div>
