--- a/content/dergi/sayi-0-giris.html
+++ b/content/dergi/sayi-0-giris.html
@@ -14,16 +14,28 @@ tags= [
 ]
 +++
 
-<div class="container mgen"><p>
- Bauhausla birlikte modern tasarım anlayışının temelleri atılıp, süsleme yanlış bulunularak yapılardan söz edilmeye başlanmıştır. Ancak bu temelde doğru sayılsa bile bir yaratım yalnız geometri yahut süsleme değildir. Bu noktada esas kaynak olan doğaya inerek gözlemlerimizi artırarak nihai hedefimize ulaşmış olacağız.
-
-Görüneni iki veya üç boyutlu aktarmak bir hedef değil. Ancak formun neden biçim aldığını ve biçim alışındaki etmenleri analiz ederek bir sonraki aşamaya geçebiliriz. Bu hususta ana unsurumuz olan temel geometrik formlar, yaptığımız işlemi gerçekleştirmede birer araç olarak ele alınacak; geleneksel yöntemlerle çalışırken teknolojik olanaklardan maksimum doğrultuda yararlanılarak ilerlenecektir. 
-
-Bir tasarımın oluşumu doğrultusunda geçmişten alınan tüm birikim değerlendirilerek çalışmanın yanı sıra en gerçek yaratımın analizi yapılacaktır. Buradan alınan bilgiler doğrultusunda günümüz dünyasına çözümler sunulmuş olacaktır.
-
-Öyleyse yaptığımız işin bilincine varalım ve yarının dünyasının yaratılmasına yardımcı olalım.
-
-Bu sözlerle Markut ekibiyle 28 şubatta bir araya geldik ve ilk toplantılarımızı yapmaya başladık. Bir arada bulunma amacımız kendimize fayda sağlamak değil, araştırmalar yapmak, ürünler üretmek ve bunları da size sunabilmekti. Bu platform sayesindeyse ilk adımımızı atmış oluyoruz. Başlıca endüstriyel tasarım olmak üzere tasarım disiplinlerine de değineceğiz. Bu platformla birlikte kendi ufkumuzu genişleteceğimize inanıyor ve size de fayda sağlayacağını temenni ediyoruz. Markut ekibiyle bu heyecanı paylaşmaktan gurur duyuyor ve ilk sayımızla sizi baş başa bırakmak istiyorum. Sağlıcakla kalın.
-
-</p>
+<div class="container mgen">
+	<p>
+		Bauhausla birlikte modern tasarım anlayışının temelleri atılıp, süsleme yanlış bulunularak yapılardan söz edilmeye
+		başlanmıştır. Ancak bu temelde doğru sayılsa bile bir yaratım yalnız geometri yahut süsleme değildir. Bu noktada
+		esas kaynak olan doğaya inerek gözlemlerimizi artırarak nihai hedefimize ulaşmış olacağız. Görüneni iki veya üç
+		boyutlu aktarmak bir hedef değil. Ancak formun neden biçim aldığını ve biçim alışındaki etmenleri analiz ederek
+		bir sonraki aşamaya geçebiliriz. Bu hususta ana unsurumuz olan temel geometrik formlar, yaptığımız işlemi
+		gerçekleştirmede birer araç olarak ele alınacak; geleneksel yöntemlerle çalışırken teknolojik olanaklardan
+		maksimum doğrultuda yararlanılarak ilerlenecektir. Bir tasarımın oluşumu doğrultusunda geçmişten alınan tüm
+		birikim değerlendirilerek çalışmanın yanı sıra en gerçek yaratımın analizi yapılacaktır. Buradan alınan bilgiler
+		doğrultusunda günümüz dünyasına çözümler sunulmuş olacaktır. Öyleyse yaptığımız işin bilincine varalım ve yarının
+		dünyasının yaratılmasına yardımcı olalım.
+	</p>
+	<p>
+		Bu sözlerle Markut ekibiyle 28 şubatta bir araya geldik ve ilk toplantılarımızı yapmaya başladık. Bir arada
+		bulunma amacımız kendimize fayda sağlamak değil, araştırmalar yapmak, ürünler üretmek ve bunları da size
+		sunabilmekti. Bu platform sayesindeyse ilk adımımızı atmış oluyoruz.
+	</p>
+	<p>
+		Başlıca endüstriyel tasarım olmak üzere tasarım disiplinlerine de değineceğiz. Bu platformla birlikte kendi
+		ufkumuzu genişleteceğimize inanıyor ve size de fayda sağlayacağını temenni ediyoruz. Markut ekibiyle bu heyecanı
+		paylaşmaktan gurur duyuyor ve ilk sayımızla sizi baş başa bırakmak istiyorum.
+	</p>
+	<p>Sağlıcakla kalın.</p>
 </div>
