--- a/content/dergi/sayi-1-rayların-üzerinde-raymond-loewy.html
+++ b/content/dergi/sayi-1-rayların-üzerinde-raymond-loewy.html
@@ -2,86 +2,158 @@
 title: Rayların Üzerinde Raymond Loewy
 url: sayi-1/raymond-loewy/
 date: 2020-09-01
-yazar: 
-  - Zeynep Yarar
+yazar:
+   - Zeynep Yarar
 thumb: /img/loewy-lokomotif-thumbnail.jpg
 tags:
-  - anasayfa
-  - Raymond Loewy
-  - dergi
+   - anasayfa
+   - Raymond Loewy
+   - dergi
 aciklama: 5 Kasım 1893’de Paris’te doğan Raymond Loewy, Amerika’da ürettiği
-  eserleri sayesinde Amerikalı tasarımcı olarak tanınmıştır. Tasarım anlayışında
-  fonksiyon ön plandadır, form ve biçim daha sade ve geri plandadır.
+   eserleri sayesinde Amerikalı tasarımcı olarak tanınmıştır. Tasarım anlayışında
+   fonksiyon ön plandadır, form ve biçim daha sade ve geri plandadır.
 seotitle: Rayların Üzerinde Raymond Loewy
 description: Raymond Loewy, Amerika’da ürettiği eserleriyle Amerikalı tasarımcı
-  olarak tanınmıştır. S-1 Lokomtif tasarımıyla Loewy sonsuza kadar aerodinamik
-  (streamline) trenle özleşecek.
-sayi: 
-  - '01'
-sayfa: "04"
+   olarak tanınmıştır. S-1 Lokomtif tasarımıyla Loewy sonsuza kadar aerodinamik
+   (streamline) trenle özleşecek.
+sayi:
+   - '01'
+sayfa: '04'
 type: sayfa
 ---
 
-<div class="text-center"><img class="img-fluid" src="/img/raymond-loewy-raylarin-uzerinde.jpg" alt="Rayların Üzerinde Raymond Loewy"></div>
+<div class="text-center">
+	<img class="img-fluid" src="/img/raymond-loewy-raylarin-uzerinde.jpg" alt="Rayların Üzerinde Raymond Loewy" />
+</div>
 <div class="container">
-    <div class="row">
-        <div class="col-md-6"><p>5 Kasım 1893’de Paris’te doğan Raymond Loewy, Amerika’da ürettiği eserleri sayesinde
-            Amerikalı tasarımcı olarak tanınmıştır. Tasarım anlayışında fonksiyon ön plandadır, form ve
-            biçim daha sade ve geri plandadır.</p>
-        <p>Raymond Loewy’in yaptığı Orijinal Coca-Cola kontur şişesi ve logosu, Exxon logosu ve
-            Avanti otomobil için tasarımları 1950'lerin ve 1960'ların ikonlarıdır. Daha az bilineni ise,
-            1934'ten 1952'ye kadar Pennsylvania Demiryolu (PRR) için yaptığı çalışmadır.</p>
-        <p>Yirminci yüzyılın ilk yarısında Pennsylvania Demiryolu ve göz kamaştırıcı Loewy
-            organizasyonu, Makine Çağı'nı sembolize edecek bir dizi çalışma ve işbirliği yaptı.</p><p>Bununla birlikte, bu üretken ve simbiyotik ittifakın altında, çok farklı iki kültürün sorunlu ve
-                karmaşık bir birleşimi vardı. Pennsylvania'nın gizlenmiş demiryolu adamları tasarımcıların
-                çalışmalarını sadece kozmetik fırfırlar olarak görürken, Loewy ve ortakları kendilerini
-                demiryolu operasyonlarının ayrılmaz bir parçası olarak gördüler.</p>
-            <p>Zorunlu ve sorunlu geçen Loewy-Pennsy ilişkisinin ortaya çıkardığı sonuç, Amerikan
-                endüstrisinde tasarım ve formun nihai birleşimi olan muazzam bir potansiyel göstermiştir.</p></div>
-                <div class="col-md-6 mt-5"><img class="img-fluid" src="/img/raymond-loewy-collage.jpg" alt="Raymond Loewy Kolaj"></div>        
-        <div class="col-md-6"><p>Lokomotif çalışmasında, önemli mühendislik sorunları çözüldükten sonra Loewy dekoratif
-            amaçlar için çağrıldı. Aynı dönemlerde rakibi Henry Dreyfuss gibi Loewy de lokomotif ve araç
-            iç mekanlarından yemek takımlarına, peçetelere ve menülere kadar her şeyi tasarladı.</p>
-        <p>Efsaneleşen lokomotif tasarımının iç mekanında ne tür tasarım kaygılarının oluştuğuna
-            değinmek için Loewy’nin çizimlerine bakmak gerek.</p></div>
-    </div>
-    <div class="row">
-        <div class="col-md-4"><p>Haddelenmiş koltuklar, porthole pencereler ve duvarlardaki hız çizgileri…</p>
-            <p>Zamanını radikal bir düzene sokmaya çalışan Loewy, 1935’deki bu çiziminde koltuktan yatağa dönüşebilen katlamalı konseptini temsil ediyor. Ancak bu modern iç mekan, PRR'nin kucaklamak için hazır olmadığı bir fikir.</p>
-            </div>
-        <div class="col-md-8"><img class="img-fluid" src="/img/raymond-loewy-lokomotif-1935.jpg" alt="Raymond Loewy Lokomotif İç Tasarımı 16 Ocak 1935"><small>Resim 1. (16 Ocak 1935)</small></div>
-        <div class="col-md-4"><p>Bir yıl sonraki ikinci çizim, bir aracın iç mekanını güncellemek için daha pratik -daha az estetik olsa bile- bir çözümü temsil ediyor. Loewy bu çiziminde; koltuk uçlarına panel ekleyerek, koltuk rengini parlak sarıyla ve döşemeyi muşambayla değiştirerek -mevcut banliyö aracını yeniden şekillendirdiği MP-54 binek aracı için- daha kabul edilebilir ve daha az maliyetli bir tasarım sunmuştur.</p>
-            <p>Önceki tasarım hiçbir zaman uygulanmadıysa da, sonraki tasarım bir şekilde gerçekleştirilmiş olabilir. Loewy'nin kariyerinde nispeten erken olan bu önemli çizimler, iki tasarım yaklaşımını göstermektedir: biri gelişmiş bir konsept çizimi ve diğeri modern stile daha pragmatik bir çözüm.</p>
-            </div>
-        <div class="col-md-8"><img class="img-fluid" src="/img/raymond-loewy-lokomotif-1936.jpg" alt="Raymond Loewy Lokomotif İç Tasarımı 26 Mayıs 1936"><small>Resim 2. (26 Mayıs 1936)</small></div>
-        <div class="col-md-4"><p>Aracın dışına çıktığımızda zamanın ötesine yolculuk eden tasarımı görmekteyiz.</p>
-            <p>Raymond, 1938'de Pennsylvania Demiryolu için dünyanın en büyük buharlı lokomotifi olan S-1 tasarımını tanıttı. Mermi burun, çıkıntılı far ve motorun uzunluğunu uzatan yatay krom şeritlere sahip olan S-1, 1939 Dünya Fuarı'nda cazibe merkezi oldu. Yalnızca bir tane S-1 üretildi, ancak Loewy'nin PRR için yaptığı çalışmaların çoğu gibi, inanılmaz bir promosyon parçası olarak hizmet etti. Başarısı tesadüf değildi. Bu tasarımı, Loewy'yi sonsuza kadar aerodinamik (streamline) trenle özdeşleştirecekti.</p>
-           </div>
-           <div class="col-md-8"><br><img class="img-fluid" src="/img/raymond-loewy-lokomotif.jpg" alt="Raymond Loewy Lokomotif Illustrasyonu"></div>
-           <div class="col-md-12"><br> <img class="img-fluid" src="/img/PRR-S1-Loewy.jpg" alt="Raymond Loewy'nin PRR için yaptığı S1 Lokomotif tasarımı"></div>
-    </div>
-    <button
-    class="btn markutbtn mt-4"
-    data-target="#my-collapse"
-    data-toggle="collapse"
-    aria-expanded="false"
-    aria-controls="my-collapse"
-    >
-    Kaynaklar
-    </button>
-    <div id="my-collapse" class="collapse">
-    <pre> <small><code>  
-      Koltuk çizimlerine kaynak
+	<div class="row">
+		<div class="col-md-6">
+			<p>
+				5 Kasım 1893’de Paris’te doğan Raymond Loewy, Amerika’da ürettiği eserleri sayesinde Amerikalı tasarımcı
+				olarak tanınmıştır. Tasarım anlayışında fonksiyon ön plandadır, form ve biçim daha sade ve geri plandadır.
+			</p>
+			<p>
+				Raymond Loewy’in yaptığı Orijinal Coca-Cola kontur şişesi ve logosu, Exxon logosu ve Avanti otomobil için
+				tasarımları 1950'lerin ve 1960'ların ikonlarıdır. Daha az bilineni ise, 1934'ten 1952'ye kadar Pennsylvania
+				Demiryolu (PRR) için yaptığı çalışmadır.
+			</p>
+			<p>
+				Yirminci yüzyılın ilk yarısında Pennsylvania Demiryolu ve göz kamaştırıcı Loewy organizasyonu, Makine
+				Çağı'nı sembolize edecek bir dizi çalışma ve işbirliği yaptı.
+			</p>
+			<p>
+				Bununla birlikte, bu üretken ve simbiyotik ittifakın altında, çok farklı iki kültürün sorunlu ve karmaşık
+				bir birleşimi vardı. Pennsylvania'nın gizlenmiş demiryolu adamları tasarımcıların çalışmalarını sadece
+				kozmetik fırfırlar olarak görürken, Loewy ve ortakları kendilerini demiryolu operasyonlarının ayrılmaz bir
+				parçası olarak gördüler.
+			</p>
+			<p>
+				Zorunlu ve sorunlu geçen Loewy-Pennsy ilişkisinin ortaya çıkardığı sonuç, Amerikan endüstrisinde tasarım ve
+				formun nihai birleşimi olan muazzam bir potansiyel göstermiştir.
+			</p>
+		</div>
+		<div class="col-md-6 mt-5">
+			<img class="img-fluid" src="/img/raymond-loewy-collage.jpg" alt="Raymond Loewy Kolaj" />
+		</div>
+		<div class="col-md-6">
+			<p>
+				Lokomotif çalışmasında, önemli mühendislik sorunları çözüldükten sonra Loewy dekoratif amaçlar için
+				çağrıldı. Aynı dönemlerde rakibi Henry Dreyfuss gibi Loewy de lokomotif ve araç iç mekanlarından yemek
+				takımlarına, peçetelere ve menülere kadar her şeyi tasarladı.
+			</p>
+			<p>
+				Efsaneleşen lokomotif tasarımının iç mekanında ne tür tasarım kaygılarının oluştuğuna değinmek için
+				Loewy’nin çizimlerine bakmak gerek.
+			</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-md-4">
+			<p>Haddelenmiş koltuklar, porthole pencereler ve duvarlardaki hız çizgileri…</p>
+			<p>
+				Zamanını radikal bir düzene sokmaya çalışan Loewy, 1935’deki bu çiziminde koltuktan yatağa dönüşebilen
+				katlamalı konseptini temsil ediyor. Ancak bu modern iç mekan, PRR'nin kucaklamak için hazır olmadığı bir
+				fikir.
+			</p>
+		</div>
+		<div class="col-md-8">
+			<img
+				class="img-fluid"
+				src="/img/raymond-loewy-lokomotif-1935.jpg"
+				alt="Raymond Loewy Lokomotif İç Tasarımı 16 Ocak 1935"
+			/>
+			<small>Resim 1. (16 Ocak 1935)</small>
+		</div>
+		<div class="col-md-4">
+			<p>
+				Bir yıl sonraki ikinci çizim, bir aracın iç mekanını güncellemek için daha pratik -daha az estetik olsa
+				bile- bir çözümü temsil ediyor. Loewy bu çiziminde; koltuk uçlarına panel ekleyerek, koltuk rengini parlak
+				sarıyla ve döşemeyi muşambayla değiştirerek -mevcut banliyö aracını yeniden şekillendirdiği MP-54 binek
+				aracı için- daha kabul edilebilir ve daha az maliyetli bir tasarım sunmuştur.
+			</p>
+			<p>
+				Önceki tasarım hiçbir zaman uygulanmadıysa da, sonraki tasarım bir şekilde gerçekleştirilmiş olabilir.
+				Loewy'nin kariyerinde nispeten erken olan bu önemli çizimler, iki tasarım yaklaşımını göstermektedir: biri
+				gelişmiş bir konsept çizimi ve diğeri modern stile daha pragmatik bir çözüm.
+			</p>
+		</div>
+		<div class="col-md-8">
+			<img
+				class="img-fluid"
+				src="/img/raymond-loewy-lokomotif-1936.jpg"
+				alt="Raymond Loewy Lokomotif İç Tasarımı 26 Mayıs 1936"
+			/>
+			<small>Resim 2. (26 Mayıs 1936)</small>
+		</div>
+		<div class="col-md-4">
+			<p>Aracın dışına çıktığımızda zamanın ötesine yolculuk eden tasarımı görmekteyiz.</p>
+			<p>
+				Raymond, 1938'de Pennsylvania Demiryolu için dünyanın en büyük buharlı lokomotifi olan S-1 tasarımını
+				tanıttı. Mermi burun, çıkıntılı far ve motorun uzunluğunu uzatan yatay krom şeritlere sahip olan S-1, 1939
+				Dünya Fuarı'nda cazibe merkezi oldu. Yalnızca bir tane S-1 üretildi, ancak Loewy'nin PRR için yaptığı
+				çalışmaların çoğu gibi, inanılmaz bir promosyon parçası olarak hizmet etti. Başarısı tesadüf değildi. Bu
+				tasarımı, Loewy'yi sonsuza kadar aerodinamik (streamline) trenle özdeşleştirecekti.
+			</p>
+		</div>
+		<div class="col-md-8">
+			<br />
+			<img class="img-fluid" src="/img/raymond-loewy-lokomotif.jpg" alt="Raymond Loewy Lokomotif Illustrasyonu" />
+		</div>
+		<div class="col-md-12">
+			<br />
+			<img
+				class="img-fluid"
+				src="/img/PRR-S1-Loewy.jpg"
+				alt="Raymond Loewy'nin PRR için yaptığı S1 Lokomotif tasarımı"
+			/>
+		</div>
+	</div>
+	<button
+		class="btn markutbtn mt-4"
+		data-target="#my-collapse"
+		data-toggle="collapse"
+		aria-expanded="false"
+		aria-controls="my-collapse"
+	>
+		Kaynaklar
+	</button>
+	<div id="my-collapse" class="collapse">
+		<pre> <small><code>  
       Collection ‘’Cooper Hewitt’’
-      HIGH FASHION TRAIN INTERIOR
-     
-      DRAWING, DESIGN FOR STREAMLINE SLEEPER CAR WITH TWO SEAT COMPARTMENT, JANUARY 16, 1935
 
-      DRAWING, INTERIOR COLOR TREATMENT FOR MP-54 COACH PASSENGER CAR, MAY 26, 1936
+      High Fashion Train Interior
+
+      Drawing, design for streamlıne sleeper car wıth two seat compartment, January 16, 1935
+
+      Drawing, interior color treatment for MP-54 coach passenger car, May 26, 1936
+
+      The Magazine ‘’Invention and Technology"
+
+      Troubled Marriage: Raymond Loewy And The Pennsylvania Railroad
 
       https://www.theavanti.com/lithograph/s1.html  (Lokomotoif s-1 çizim)
 
       https://en.wikipedia.org/wiki/Raymond_Loewy (raymond ve lokomotifli görsel)      
       </code></small></pre>
-    </div>
+	</div>
 </div>
