--- a/content/dergi/sayi-2-ikonik-masa-lamba.html
+++ b/content/dergi/sayi-2-ikonik-masa-lamba.html
@@ -185,7 +185,7 @@ tags= [
         1985&#39;te İskoçya&#39;daki Loch Ness&#39;ten düşen bir Vickers
         Wellington bombardıman uçağı kurtarıldığında, lamba yaklaşık kırk
         yıldır suya batırılmış olmasına rağmen yeni bir pil verildikten sonra
-        hala çalışıyordu.
+        hâlâ çalışıyordu.
       </p>
     </div>
   </div>
