--- a/content/dergi/sayi-2-iskandinav-tasarimina-bakis.html
+++ b/content/dergi/sayi-2-iskandinav-tasarimina-bakis.html
@@ -173,7 +173,7 @@ tags= [
         Ahşabın ustalığı ve mobilya üretiminde ahşabı denemesi, 1930’larda
         birçok patentin önünü açtı. Tasarımlarından biri, Tüberküloz
         hastalarının nefes almasını kolaylaştıran Paimio Sandalye idi. Günümüzde
-        hala revaçta olan Aalto’nun tasarımları, güzelliğin işlevselliğe eşlik
+        hâlâ revaçta olan Aalto’nun tasarımları, güzelliğin işlevselliğe eşlik
         edebileceğini kanıtlar nitelikte.
       </p>
       <figure class="figure">
