--- a/content/dergi/sayi-3-iskandinav.html
+++ b/content/dergi/sayi-3-iskandinav.html
@@ -4,7 +4,7 @@ url = "sayi-3/iskandinav-tasarimi-gecmisten-gunumuze/"
 date = "2020-11-01"
 seotitle = "Geçmişten Günümüze İskandinav Tasarımı"
 description="Bu sayımızda iskandinav tasarımına geçmişten günümüze bakış attık. İskandinav tasarım hareketi yerini artık İtalyan tasarımlarına bırakıyordu."
-aciklama="1980'lerden itibaren yavaşlama sürecine giren İskandinav tasarım hareketi yerini artık İtalyan tasarımlarına bırakıyordu. Ancak popüler kültürün de etkisiyle tekrar sunulan İskandinav tasarımları günümüze kadar hala tüm dünyada popülerliğini korumakta."
+aciklama="1980'lerden itibaren yavaşlama sürecine giren İskandinav tasarım hareketi yerini artık İtalyan tasarımlarına bırakıyordu. Ancak popüler kültürün de etkisiyle tekrar sunulan İskandinav tasarımları günümüze kadar hâlâ tüm dünyada popülerliğini korumakta."
 thumb="/img/iskandinav-tasarimi-markut.jpg"
 sayi=[
 "03"
@@ -25,7 +25,7 @@ tags= [
         1980'lerden itibaren yavaşlama sürecine giren İskandinav tasarım
         hareketi yerini artık İtalyan tasarımlarına bırakıyordu. Ancak popüler
         kültürün de etkisiyle tekrar sunulan İskandinav tasarımları günümüze
-        kadar hala tüm dünyada popülerliğini korumakta. Peki günümüzde
+        kadar hâlâ tüm dünyada popülerliğini korumakta. Peki günümüzde
         İskandinav stili neden bu kadar revaçta?
       </p>
     </div>
