--- a/content/dergi/sayi-3-kitchenaid.html
+++ b/content/dergi/sayi-3-kitchenaid.html
@@ -208,7 +208,7 @@ tags= [
       <p>
         <em>Hobart Manufacturing Company</em> için tasarladığı mutfak yardımcısı
         <strong>&#39;&#39;Model K&#39;&#39;</strong> 1937&#39;de büyük bir
-        başarıya ulaştı. Modern mikser yaklaşık 100 yıldır hala KitchenAid
+        başarıya ulaştı. Modern mikser yaklaşık 100 yıldır hâlâ KitchenAid
         tarafından kullanılan tasarım standardını belirledi.
       </p>
     </div>
