--- a/content/dergi/sayi-4-sumerbank.html
+++ b/content/dergi/sayi-4-sumerbank.html
@@ -4,7 +4,7 @@ url = "sayi-4/sumerbank-fabrika-yatirim-ekonomi-tasarim/"
 date = "2020-12-01"
 seotitle = "Sümerbank \"Fabrika-Yatırım-Ekonomi-Tasarım\""
 description=""
-aciklama="Antik uygarlıkların beşiği Anadolu'nun eşsiz desen hafızası, tüm özgün renkleri ve dokularıyla Sümerbank kumaşlarında yerini aldı. Geriye hala hafızalardan silinmeyen Merinos kumaşları, Nazilli basmaları, Hereke dokumaları kaldı."
+aciklama="Antik uygarlıkların beşiği Anadolu'nun eşsiz desen hafızası, tüm özgün renkleri ve dokularıyla Sümerbank kumaşlarında yerini aldı. Geriye hâlâ hafızalardan silinmeyen Merinos kumaşları, Nazilli basmaları, Hereke dokumaları kaldı."
 thumb="/img/sumerbank-thumnail.jpg"
 sayi=[
 "04"
@@ -113,7 +113,7 @@ tags= [
   </div>
 </div>
 <div class="row">
-  <div class="col-md-6"><p>Sümerbank, çalışanlarının barınması konusunda da öncü adımlar atmıştır. Hemen her fabrikada işçiler için her türlü sağlık ve temizlik ihtiyaçlarının karşılandığı lojmanlar kurmuştur. Büyük fabrikaların civarında ise çalışanlar için mahalleler inşa etmiştir. Örneğin Nazilli Sümerbank fabrikası çevresinde kurulan Sümer Mahallesi günümüzde hala Nazilli’nin en büyük mahallesidir.[3] </p>
+  <div class="col-md-6"><p>Sümerbank, çalışanlarının barınması konusunda da öncü adımlar atmıştır. Hemen her fabrikada işçiler için her türlü sağlık ve temizlik ihtiyaçlarının karşılandığı lojmanlar kurmuştur. Büyük fabrikaların civarında ise çalışanlar için mahalleler inşa etmiştir. Örneğin Nazilli Sümerbank fabrikası çevresinde kurulan Sümer Mahallesi günümüzde hâlâ Nazilli’nin en büyük mahallesidir.[3] </p>
     <p>Sümerbank tarafından kurulan Kayseri Bez Fabrikası lojmanları da modern mimarinin en önemli örneklerinden birisi olmuştur. 1934’te temeli atılan Sümerbank Kayseri Bez Fabrikası ve Lojmanları Rusya’da tasarlanıp, Türkiye Rusya işbirliği ile inşa edilmiştir. Fabrika Lojmanları hem kenti ve çevresini hedeflenen “modern” kimliğe göre şekillendirmiş hem de sanayileşme hedefini gerçekleştirmiştir.</p>
     </div>
   <div class="col-md-6"><br><img src="/img/nazilli-basma-fabrikasi-sumerbank.jpg" alt=""></div>
@@ -164,7 +164,7 @@ tags= [
 
   <h3>Desen Hafızası</h3>
   <p><strong><em>Antik uygarlıkların beşiği Anadolu'nun eşsiz desen hafızası, tüm özgün renkleri ve dokularıyla Sümerbank kumaşlarında yerini aldı. </em></strong></p>
-  <p><strong><em>Geriye hala hafızalardan silinmeyen Merinos kumaşları, Nazilli basmaları, Hereke dokumaları kaldı.</em></strong></p>
+  <p><strong><em>Geriye hâlâ hafızalardan silinmeyen Merinos kumaşları, Nazilli basmaları, Hereke dokumaları kaldı.</em></strong></p>
   <p>İnsanları birleştiren bir <strong>ortak payda görevi gören </strong>Sümerbank’ın desenleri,  “Sümerbank basması” deyişiyle dilimize yerleşmiştir.</p>
   <p><em><strong>1933’ten 2000’lere uzanan desen arşivine işte 7 saniyelik bir tur... Nostalji dolu bir yolculuk..</strong></em></p>
   
@@ -174,7 +174,7 @@ tags= [
 <div class="row">
   <div class="col-md-7">  <p>Cumhuriyet’in erken dönemlerindeki ekonomik koşullar Sümerbank tekstillerinde kullanılan hammadde, boyar madde ve kimyasal madde kullanımını belirlemenin yanı sıra Türk halkının giysi ile olan ilişkisini şekillendirmiştir. Guaj boya ile kağıt üzerine çizilen desenler üretim kapasitesine uygun olması için iki ila dört farklı renk kullanılarak tasarlanmıştır. Nazilli Basma Fabrikasında üretilen kumaşlarda seri üretim kapasitesi dahilindeki lineer geometrik kompozisyonlar ile Anadolu kültürünü temsil eden çiçekli ve folklorik desenler en belirleyici tasarım elemanları olmuştur. Sümerbank basma ve pazenlerinden dikilmiş tipik puanlı ve çizgi desenli pijamalar, okul önlükleri, elbiseler ve gömlekler bir dönemin standartlaşmış günlük giysilerini oluşturmuştur.</p>
 
-    <p>Desen bölümünde sanatçılar tarafından oluşturulan desenler, Gravür bölümünde bakır levhalara aktarılıyor. Bakır levhalar üzerinde asit işlemi uygulanarak, çukurluklar meydana getiriliyor ve gravür hazırlanıyor. Baskı bölümünde boyaları üzerine alan desenli bakır levhalar, yerleştirildikleri silindir sayesinde sonsuz bir şekilde ve desen tekrarı yaparak silindirlerin arasından geçen kumaşın üzerine deseni aktarıyorlar. Böylece kumaş deseni haline getiriliyor. Basım işi yapıldığı için de bu kumaşa '<strong>basma'</strong> deniyor.[4]</p>
+    <p>Desen bölümünde sanatçılar tarafından oluşturulan desenler, Gravür bölümünde bakır levhâlâra aktarılıyor. Bakır levhâlâr üzerinde asit işlemi uygulanarak, çukurluklar meydana getiriliyor ve gravür hazırlanıyor. Baskı bölümünde boyaları üzerine alan desenli bakır levhâlâr, yerleştirildikleri silindir sayesinde sonsuz bir şekilde ve desen tekrarı yaparak silindirlerin arasından geçen kumaşın üzerine deseni aktarıyorlar. Böylece kumaş deseni haline getiriliyor. Basım işi yapıldığı için de bu kumaşa '<strong>basma'</strong> deniyor.[4]</p>
     </div>
   <div class="col-md-5"><br>
     <figure class="figure">
