--- a/content/dergi/sayi-5/3d-yazicilar/index.html
+++ b/content/dergi/sayi-5/3d-yazicilar/index.html
@@ -48,7 +48,7 @@ tags= ["ana sayfa", "dergi"]
    <p>
       Üretim için 3B baskıyı kullanmanın faydaları göz ardı edilemez:
       verimlilik, hız, israfı azaltma, daha az hata ve daha az maliyet. Bununla
-      birlikte, birçok üretici hala geleneksel yöntemlerden bu yeni üretim
+      birlikte, birçok üretici hâlâ geleneksel yöntemlerden bu yeni üretim
       yöntemine geçiş yapmamaya karar veriyor. Belirli büyük ölçekli parçaların
       üretimi söz konusu olduğunda, bir 3B yazıcı kullanmak, şirketlerin
       uğraşması gereken bazı zorluklarla birlikte gelir, örneğin: Ekipmanın
