--- a/content/dergi/sayi-5/ikonik-tasarimlar-lego/index.html
+++ b/content/dergi/sayi-5/ikonik-tasarimlar-lego/index.html
@@ -92,7 +92,7 @@ tags= ["ana sayfa", "dergi"]
    <div class="row">
       <div class="col-md-6">
          <p>
-            Savaş döneminde bile oyuncak piyasası hala ayaktaydı. Savaş sonrası
+            Savaş döneminde bile oyuncak piyasası hâlâ ayaktaydı. Savaş sonrası
             piyasada talepte fazlaca bir artış göründü ve 40’lı yıllarda ahşap
             oyuncak üretimi sürdürecek yeterli ahşap bulunamaz olmuştu.
          </p>
@@ -213,7 +213,7 @@ tags= ["ana sayfa", "dergi"]
             ‘’6 tane LEGO’dan 950.103.765 farklı birleşim çıkıyordu’’
          </p>
          <p>
-            LEGO günümüzde hala ilk patentli sistemlerini kullanıyor. Oyuncak
+            LEGO günümüzde hâlâ ilk patentli sistemlerini kullanıyor. Oyuncak
             şirketleri arasında başka bir örneği olmayan bu durum LEGO için
             riskli bir işletme modeli olsa da 1958 yılında üretilen bir tuğla
             parçasının günümüzdekiyle uyumlu olması harika bir
