--- a/content/dergi/sayi-5/jukebox/index.html
+++ b/content/dergi/sayi-5/jukebox/index.html
@@ -104,7 +104,7 @@ tags= ["ana sayfa", "dergi"]
    <ul>
       <li>
          <strong>Rock-Ola.</strong>
-         Başka bir meydan okuyucu. Üretimi hala aktif ve hayatta kalan tek
+         Başka bir meydan okuyucu. Üretimi hâlâ aktif ve hayatta kalan tek
          örnek.
       </li>
    </ul>
@@ -175,7 +175,7 @@ tags= ["ana sayfa", "dergi"]
             tasarlandı. Müzik kutuları, her yeni modelin çıkışıyla değişen trend
             sonrasında zamanın statü zincirinde geri dönüştürüldü. Irkçılığın
             bağnazca olduğu zamanlarda
-            <em>(ki bağnazlığın hala devam ediyor oluşunun utançlığı)</em>
+            <em>(ki bağnazlığın hâlâ devam ediyor oluşunun utançlığı)</em>
             , makineler siyahi insanların mahallelerine ulaştığında kalıcı
             ismini aldılar.
          </p>
@@ -441,7 +441,7 @@ tags= ["ana sayfa", "dergi"]
          </p>
          <p>
             İkonikleşen kabin, bugün dahi hemen tanınabiliyor. Ayrıca, Wurlitzer
-            şirketinin kalıntıları, bugün hala aynı modeli yapmaya devam ediyor.
+            şirketinin kalıntıları, bugün hâlâ aynı modeli yapmaya devam ediyor.
             Yeni nesil
             <em>jukebox</em>
             &#x27;larda CD çalar ve hatta iPod teknolojisi mevcut.
