--- a/content/dergi/sayi-5/liter-of-light/index.html
+++ b/content/dergi/sayi-5/liter-of-light/index.html
@@ -2,7 +2,7 @@
 title = "Umut Işığı: Liter of Light"
 description=""
 url="sayi-5/liter-of-light"
-aciklama="21.Yüzyıl dünyasında temel ihtiyaçlar da dahil olmak üzere herkes eşit olanaklara sahip değil. Kimi coğrafyadaki bireyler için elektriğe ulaşmak hâlâ bir ayrıcalık sayılıyor. Dünyada bir milyara yakın insan doğal afetler ve ekonomik sebeplerle elektriğe hala erişemiyor. Elektrik olmadan yaşamını sürdüren birçok topluma umut ışığı olan 'Liter of Light' projesiyle tanışalım."
+aciklama="21.Yüzyıl dünyasında temel ihtiyaçlar da dahil olmak üzere herkes eşit olanaklara sahip değil. Kimi coğrafyadaki bireyler için elektriğe ulaşmak hâlâ bir ayrıcalık sayılıyor. Dünyada bir milyara yakın insan doğal afetler ve ekonomik sebeplerle elektriğe hâlâ erişemiyor. Elektrik olmadan yaşamını sürdüren birçok topluma umut ışığı olan 'Liter of Light' projesiyle tanışalım."
 type="sayfa"
 thumb="/img/"
 date = "2021-01-01"
@@ -22,7 +22,7 @@ tags= ["ana sayfa", "dergi"]
             Ajansı (IEA), Uluslararası Yenilenebilir Enerji Ajansı, Birleşmiş
             Milletler, Dünya Bankası ve Dünya Sağlık Örgütü (WHO) tarafından
             derlenen verilere göre dünyada bir milyara yakın insan doğal afetler
-            ve ekonomik sebeplerle elektriğe hala erişemiyor. Elektrik olmadan
+            ve ekonomik sebeplerle elektriğe hâlâ erişemiyor. Elektrik olmadan
             yaşamını sürdüren birçok topluma umut ışığı olan &quot;Liter of
             Light&quot; projesiyle tanışalım.
          </p>
