--- a/content/dergi/sayi-5/tasarimda-malzeme-karton/index.html
+++ b/content/dergi/sayi-5/tasarimda-malzeme-karton/index.html
@@ -22,7 +22,7 @@ tags= ["ana sayfa", "dergi"]
 	<p></p>
 	<p>
 		Kimyager Carl. F. Dahl, daha sonra kağıt yapım sürecinde kullanılacak olan
-		odun hamurlaştırma işlemini geliştirdi. Günümüzde de hala var olan bu sisteme
+		odun hamurlaştırma işlemini geliştirdi. Günümüzde de hâlâ var olan bu sisteme
 		“Kraft işlemi” adını verdi. Bu aşamada kereste, talaş ve diğer ahşap ürünleri
 		Kraft veya diğer işlemler kullanılarak kağıt hamuruna dönüştürülür.
 	</p>
