--- a/content/dergi/sayi-5/liter-of-light/index.html
+++ b/content/dergi/sayi-5/liter-of-light/index.html
@@ -35,7 +35,6 @@ tags= ["ana sayfa", "dergi"]
    </div>
 
    <p>
-      <strong>
          Liter of Light; elektriğe sınırlı erişimi olan veya hiç olmayan
          insanlara ekonomik ve sürdürülebilir ışık kaynağı sağlamayı hedefleyen
          bir proje. İlk olarak 2002&#x27;de
@@ -47,7 +46,6 @@ tags= ["ana sayfa", "dergi"]
          Aslında proje Filipinler&#x27;in başkenti Manila&#x27;da yoksul
          insanlara destek olmak amacıyla başlamış fakat kısa sürede küresel bir
          gönüllülük projesine dönüşmüştür.
-      </strong>
    </p>
 </div>
 <figure>
@@ -56,12 +54,10 @@ tags= ["ana sayfa", "dergi"]
 
 <div class="container">
    <p>
-      <strong>
          Liter of Light, atılmış plastik şişe ve borular kullanılarak %100 güneş
          enerjisiyle üretilen çevre dostu bir aydınlatma tasarımıdır. Bu akıllı
          ve yenilikçi çözüm; ailelerin eğitim, sağlık hizmetleri, beslenme ve
          geçim gibi birçok ihtiyacın giderilmesinde önemli bir eleman olmuştur.
-      </strong>
    </p>
 
    <div class="row">
@@ -75,11 +71,9 @@ tags= ["ana sayfa", "dergi"]
             oluşumunu önlüyor ve şişenin ömrü 5 yıla kadar uzuyor. Pet şişe bir
             ayna gibi çalışarak gün boyunca gün ışığını yakalıyor ve böylece 40
             – 60 watt’lık bir ampulünkine eşdeğer bir ışık kaynağı oluşturuyor.
-            <strong>
                İçi su dolu pet şişeler alüminyum bir sacı delerek içerisine
                yerleştiriliyor ve çatıda açılan uygun boşluğa sac ile birlikte
                oturtuluyor.
-            </strong>
              Böylece gündüz ışığı çok parlak bir şekilde evin içerisine
             yansıtılıyor. Projedeki tek sorun, lambanın sadece gündüz ışık
             sunabilmesi. Bunun için de Liter of Light ekibi çözüm geliştirip
@@ -108,6 +102,7 @@ tags= ["ana sayfa", "dergi"]
 <div
    style="
       background-image: url('/sayi-5/liter-of-light/liter-of-light-5-markut.jpg');
+      background-position-x: calc(-750px + 300 * (100vw - 320px) / 1180);
    "
    class="bg-mrkt"
 ></div>
