--- a/content/dergi/sayi-5/jukebox/index.html
+++ b/content/dergi/sayi-5/jukebox/index.html
@@ -48,7 +48,7 @@ tags= ["ana sayfa", "dergi"]
          <p></p>
          <p>
             <em>
-               *fonofraf: Sesleri kayıt ve tespit ederek istenildiğinde tekrar
+               *fonograf Sesleri kayıt ve tespit ederek istenildiğinde tekrar
                edilmesini sağlayan makine.
             </em>
          </p>
