--- a/content/dergi/sayi-5/jukebox/index.html
+++ b/content/dergi/sayi-5/jukebox/index.html
@@ -39,23 +39,23 @@ tags= ["ana sayfa", "dergi"]
             dinleyicilere;
          </p>
          <blockquote>
-            &quot; nota ve fonograf kayıtlarında en çok satan, havada en çok
+            &quot;Nota ve fonograf kayıtlarında en çok satan, havada en çok
             duyulan ve 
             <strong>otomatik jeton makinelerinde</strong>
-             en çok çalınan şarkılar , Amerika&#x27;nın popüler müzik zevkinin
-            otantik bir doğru çizelgesidir. &quot; dedi.
+             en çok çalınan şarkılar, Amerika&#x27;nın popüler müzik zevkinin
+            otantik bir doğru çizelgesidir.&quot; dedi.
          </blockquote>
          <p></p>
          <p>
             <em>
-               *fonograf Sesleri kayıt ve tespit ederek istenildiğinde tekrar
+               *fonograf: Sesleri kayıt ve tespit ederek istenildiğinde tekrar
                edilmesini sağlayan makine.
             </em>
          </p>
          <p>
             <em>
                *Hi-fi: İngilizce &quot;High Fidelity&quot; kelimelerinin ilk iki
-               harflerinden oluşturulmuştur.Hi-fi kategorisine giren aletler
+               harflerinden oluşturulmuştur. Hi-fi kategorisine giren aletler
                kaydedilen sesi dinleyiciye aslından neredeyse farksız olarak
                aktarabilme özelliğine sahiptir.
             </em>
